// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`what the restore paths and the parse make of it > AI: snapshot of the emitted code and the graph structure 1`] = `
"import { Fn, float, mul, normalMap, texture, uv } from 'three/tsl';

const _image1_img = new Image();
_image1_img.src = "fs-asset:gi_img0_1-7c81884b"; // model-image-0.jpg, 1024x576 webp, 144.0 KB
let _image1_ok = true;
try { await _image1_img.decode(); } catch { _image1_ok = false; }
const _image1_tex = _image1_ok ? new globalThis.THREE.Texture(_image1_img) : new globalThis.THREE.DataTexture(new Uint8Array([0, 0, 0, 255]), 1, 1, globalThis.THREE.RGBAFormat, globalThis.THREE.UnsignedByteType);
_image1_tex.colorSpace = globalThis.THREE.SRGBColorSpace;
_image1_tex.minFilter = globalThis.THREE.NearestMipmapNearestFilter;
_image1_tex.magFilter = globalThis.THREE.NearestFilter;
_image1_tex.wrapS = globalThis.THREE.ClampToEdgeWrapping;
_image1_tex.wrapT = globalThis.THREE.ClampToEdgeWrapping;
_image1_tex.flipY = false;
_image1_tex.needsUpdate = true;
const _image2_img = new Image();
_image2_img.src = "fs-asset:gi_img1_2-7794febb"; // model-image-1.png, 4x2 webp, 8 B
let _image2_ok = true;
try { await _image2_img.decode(); } catch { _image2_ok = false; }
const _image2_tex = _image2_ok ? new globalThis.THREE.Texture(_image2_img) : new globalThis.THREE.DataTexture(new Uint8Array([0, 0, 0, 255]), 1, 1, globalThis.THREE.RGBAFormat, globalThis.THREE.UnsignedByteType);
_image2_tex.colorSpace = globalThis.THREE.NoColorSpace;
_image2_tex.generateMipmaps = false;
_image2_tex.minFilter = globalThis.THREE.LinearFilter;
_image2_tex.magFilter = globalThis.THREE.LinearFilter;
_image2_tex.wrapS = globalThis.THREE.RepeatWrapping;
_image2_tex.wrapT = globalThis.THREE.RepeatWrapping;
_image2_tex.flipY = false;
_image2_tex.needsUpdate = true;
const _image3_img = new Image();
_image3_img.src = "fs-asset:gi_img2_5-92e39071"; // model-image-2.png, 2x2 webp, 4 B
let _image3_ok = true;
try { await _image3_img.decode(); } catch { _image3_ok = false; }
const _image3_tex = _image3_ok ? new globalThis.THREE.Texture(_image3_img) : new globalThis.THREE.DataTexture(new Uint8Array([0, 0, 0, 255]), 1, 1, globalThis.THREE.RGBAFormat, globalThis.THREE.UnsignedByteType);
_image3_tex.colorSpace = globalThis.THREE.NoColorSpace;
_image3_tex.generateMipmaps = false;
_image3_tex.minFilter = globalThis.THREE.LinearFilter;
_image3_tex.magFilter = globalThis.THREE.LinearFilter;
_image3_tex.wrapS = globalThis.THREE.RepeatWrapping;
_image3_tex.wrapT = globalThis.THREE.RepeatWrapping;
_image3_tex.flipY = false;
_image3_tex.needsUpdate = true;

const shader = Fn(() => {
  const image1 = texture(_image1_tex, uv()).rgb;
  const image2 = texture(_image2_tex, uv(1)).rgba;
  const float1 = float(0.5);
  const image3 = texture(_image3_tex, uv()).rgb;
  const mul1 = mul(image2.b, float1);

  return { materialParts: { "0": { color: image1, normal: normalMap(image3), roughness: image2.g, metalness: mul1 } }, modelSignature: { materials: ["", "unused"] } };
});

export default shader;
"
`;

exports[`what the restore paths and the parse make of it > AI: snapshot of the emitted code and the graph structure 2`] = `
"imageNode#0 {"imageB64":"<196631 chars>","width":1024,"height":576,"fileName":"model-image-0.jpg","colorSpace":"color","repeat":0,"filter":"nearest","orientation":"gltf"}
imageNode#1 {"imageB64":"<35 chars>","width":4,"height":2,"fileName":"model-image-1.png","colorSpace":"data","orientation":"gltf","uvSet":1}
float#2 {"value":0.5}
mul#3 {}
imageNode#4 {"imageB64":"<31 chars>","width":2,"height":2,"fileName":"model-image-2.png","colorSpace":"data","orientation":"gltf"}
output#5 {}
  materials=[{"gltfMaterialIndex":0,"exposedPorts":["color","roughness","metalness","normal","position"]}]
  modelSignature={"materials":["","unused"]} modelMeshes=[{"name":"mesh_0","material":0}]
imageNode#0.out -> output#5.m1:color (vec3)
imageNode#1.g -> output#5.m1:roughness (float)
imageNode#1.b -> mul#3.a (float)
float#2.out -> mul#3.b (float)
mul#3.out -> output#5.m1:metalness (any)
imageNode#4.out -> output#5.m1:normal (vec3)"
`;

exports[`what the restore paths and the parse make of it > BLENDER: snapshot of the emitted code and the graph structure 1`] = `
"import { Fn, color, float, mul, normalMap, texture, uv, vec2, vec3, vertexColor } from 'three/tsl';

const _image1_img = new Image();
_image1_img.src = "fs-asset:gi_img0_1-e32206a6"; // BaseColor.png, 4x4 webp, 4 B
let _image1_ok = true;
try { await _image1_img.decode(); } catch { _image1_ok = false; }
const _image1_tex = _image1_ok ? new globalThis.THREE.Texture(_image1_img) : new globalThis.THREE.DataTexture(new Uint8Array([0, 0, 0, 255]), 1, 1, globalThis.THREE.RGBAFormat, globalThis.THREE.UnsignedByteType);
_image1_tex.colorSpace = globalThis.THREE.SRGBColorSpace;
_image1_tex.wrapS = globalThis.THREE.RepeatWrapping;
_image1_tex.wrapT = globalThis.THREE.RepeatWrapping;
_image1_tex.flipY = false;
_image1_tex.needsUpdate = true;
const _image2_img = new Image();
_image2_img.src = "fs-asset:gi_img1_2-7794febb"; // ORM.png, 4x2 webp, 8 B
let _image2_ok = true;
try { await _image2_img.decode(); } catch { _image2_ok = false; }
const _image2_tex = _image2_ok ? new globalThis.THREE.Texture(_image2_img) : new globalThis.THREE.DataTexture(new Uint8Array([0, 0, 0, 255]), 1, 1, globalThis.THREE.RGBAFormat, globalThis.THREE.UnsignedByteType);
_image2_tex.colorSpace = globalThis.THREE.NoColorSpace;
_image2_tex.generateMipmaps = false;
_image2_tex.minFilter = globalThis.THREE.LinearFilter;
_image2_tex.magFilter = globalThis.THREE.LinearFilter;
_image2_tex.wrapS = globalThis.THREE.RepeatWrapping;
_image2_tex.wrapT = globalThis.THREE.RepeatWrapping;
_image2_tex.flipY = false;
_image2_tex.needsUpdate = true;
const _image3_img = new Image();
_image3_img.src = "fs-asset:gi_img2_5-92e39071"; // Normal.png, 2x2 webp, 4 B
let _image3_ok = true;
try { await _image3_img.decode(); } catch { _image3_ok = false; }
const _image3_tex = _image3_ok ? new globalThis.THREE.Texture(_image3_img) : new globalThis.THREE.DataTexture(new Uint8Array([0, 0, 0, 255]), 1, 1, globalThis.THREE.RGBAFormat, globalThis.THREE.UnsignedByteType);
_image3_tex.colorSpace = globalThis.THREE.NoColorSpace;
_image3_tex.generateMipmaps = false;
_image3_tex.minFilter = globalThis.THREE.LinearFilter;
_image3_tex.magFilter = globalThis.THREE.LinearFilter;
_image3_tex.wrapS = globalThis.THREE.RepeatWrapping;
_image3_tex.wrapT = globalThis.THREE.RepeatWrapping;
_image3_tex.flipY = false;
_image3_tex.needsUpdate = true;

const shader = Fn(() => {
  const image1 = texture(_image1_tex, uv().mul(vec2(2, 2)).add(vec2(0.25, 0))).rgb;
  const image2 = texture(_image2_tex, uv()).rgba;
  const float1 = float(0.8);
  const image3 = texture(_image3_tex, uv()).rgb;
  const vertexColor1 = vertexColor(0);
  const color1 = color(0xbcbcbc);
  const float2 = float(0.5);
  const float3 = float(0);
  const color2 = color(0xffbc89);
  const float4 = float(2);
  const mul1 = mul(image2.g, float1);
  const mul2 = mul(vertexColor1, color1);
  const mul3 = mul(image2.b, float3);
  const mul4 = mul(color2, float4);
  const mul5 = mul(vertexColor1.w, float2);

  return { materialParts: { "0": { color: image1, normal: normalMap(image3, vec2(1, -1)), roughness: mul1, metalness: image2.b, side: 2 }, "1": { color: vec3(mul2), emissive: mul4, opacity: mul5, roughness: image2.g, metalness: mul3, transparent: true, depthWrite: false }, "2": { color: color(0x7ccb59), roughness: float(0.4), metalness: float(0.25), alphaTest: 0.99 } }, modelSignature: { materials: ["Material.001", "Material.002", "Ķermenis"] } };
});

export default shader;
"
`;

exports[`what the restore paths and the parse make of it > BLENDER: snapshot of the emitted code and the graph structure 2`] = `
"imageNode#0 {"imageB64":"<31 chars>","width":4,"height":4,"fileName":"BaseColor.png","colorSpace":"color","orientation":"gltf","xfOffsetX":0.25,"xfScaleX":2,"xfScaleY":2}
imageNode#1 {"imageB64":"<35 chars>","width":4,"height":2,"fileName":"ORM.png","colorSpace":"data","orientation":"gltf"}
float#2 {"value":0.8}
mul#3 {}
imageNode#4 {"imageB64":"<31 chars>","width":2,"height":2,"fileName":"Normal.png","colorSpace":"data","orientation":"gltf","normalGreen":"flip"}
vertexColor#5 {"index":0}
color#6 {"hex":"#bcbcbc"}
mul#7 {}
split#8 {}
float#9 {"value":0.5}
mul#10 {}
float#11 {"value":0}
mul#12 {}
color#13 {"hex":"#ffbc89"}
float#14 {"value":2}
mul#15 {}
output#16 {}
  materials=[{"gltfMaterialIndex":0,"exposedPorts":["color","roughness","metalness","normal","position"],"materialSettings":{"side":"double"}},{"gltfMaterialIndex":1,"exposedPorts":["color","emissive","roughness","metalness","opacity","position"],"materialSettings":{"transparent":true,"depthWrite":false}},{"gltfMaterialIndex":2,"exposedPorts":["color","roughness","metalness","position"],"values":{"color":"#7ccb59","roughness":0.4,"metalness":0.25},"materialSettings":{"alphaTest":0.99}}]
  modelSignature={"materials":["Material.001","Material.002","Ķermenis"]} modelMeshes=[{"name":"Cube_1","material":0},{"name":"Cube_2","material":1},{"name":"Plate","material":2}]
imageNode#0.out -> output#16.m1:color (vec3)
imageNode#1.g -> mul#3.a (float)
float#2.out -> mul#3.b (float)
mul#3.out -> output#16.m1:roughness (any)
imageNode#1.b -> output#16.m1:metalness (float)
imageNode#4.out -> output#16.m1:normal (vec3)
vertexColor#5.out -> mul#7.a (vec4)
color#6.out -> mul#7.b (color)
mul#7.out -> output#16.m2:color (any)
vertexColor#5.out -> split#8.v (vec4)
split#8.w -> mul#10.a (float)
float#9.out -> mul#10.b (float)
mul#10.out -> output#16.m2:opacity (any)
imageNode#1.g -> output#16.m2:roughness (float)
imageNode#1.b -> mul#12.a (float)
float#11.out -> mul#12.b (float)
mul#12.out -> output#16.m2:metalness (any)
color#13.out -> mul#15.a (color)
float#14.out -> mul#15.b (float)
mul#15.out -> output#16.m2:emissive (any)"
`;

exports[`what the restore paths and the parse make of it > SCAN: snapshot of the emitted code and the graph structure 1`] = `
"import { Fn, float, normalMap, texture, uv } from 'three/tsl';

const _image1_img = new Image();
_image1_img.src = "fs-asset:gi_img0_1-7c81884b"; // Body_diffuse.jpg, 1024x576 webp, 144.0 KB
let _image1_ok = true;
try { await _image1_img.decode(); } catch { _image1_ok = false; }
const _image1_tex = _image1_ok ? new globalThis.THREE.Texture(_image1_img) : new globalThis.THREE.DataTexture(new Uint8Array([0, 0, 0, 255]), 1, 1, globalThis.THREE.RGBAFormat, globalThis.THREE.UnsignedByteType);
_image1_tex.colorSpace = globalThis.THREE.SRGBColorSpace;
_image1_tex.wrapS = globalThis.THREE.RepeatWrapping;
_image1_tex.wrapT = globalThis.THREE.RepeatWrapping;
_image1_tex.flipY = false;
_image1_tex.needsUpdate = true;
const _image2_img = new Image();
_image2_img.src = "fs-asset:gi_img2_2-7794febb"; // Body_orm.png, 4x2 webp, 8 B
let _image2_ok = true;
try { await _image2_img.decode(); } catch { _image2_ok = false; }
const _image2_tex = _image2_ok ? new globalThis.THREE.Texture(_image2_img) : new globalThis.THREE.DataTexture(new Uint8Array([0, 0, 0, 255]), 1, 1, globalThis.THREE.RGBAFormat, globalThis.THREE.UnsignedByteType);
_image2_tex.colorSpace = globalThis.THREE.NoColorSpace;
_image2_tex.generateMipmaps = false;
_image2_tex.minFilter = globalThis.THREE.LinearFilter;
_image2_tex.magFilter = globalThis.THREE.LinearFilter;
_image2_tex.wrapS = globalThis.THREE.RepeatWrapping;
_image2_tex.wrapT = globalThis.THREE.RepeatWrapping;
_image2_tex.flipY = false;
_image2_tex.needsUpdate = true;
const _image3_img = new Image();
_image3_img.src = "fs-asset:gi_img1_3-92e39071"; // Body_normal.png, 2x2 webp, 4 B
let _image3_ok = true;
try { await _image3_img.decode(); } catch { _image3_ok = false; }
const _image3_tex = _image3_ok ? new globalThis.THREE.Texture(_image3_img) : new globalThis.THREE.DataTexture(new Uint8Array([0, 0, 0, 255]), 1, 1, globalThis.THREE.RGBAFormat, globalThis.THREE.UnsignedByteType);
_image3_tex.colorSpace = globalThis.THREE.NoColorSpace;
_image3_tex.generateMipmaps = false;
_image3_tex.minFilter = globalThis.THREE.LinearFilter;
_image3_tex.magFilter = globalThis.THREE.LinearFilter;
_image3_tex.wrapS = globalThis.THREE.RepeatWrapping;
_image3_tex.wrapT = globalThis.THREE.RepeatWrapping;
_image3_tex.flipY = false;
_image3_tex.needsUpdate = true;

const shader = Fn(() => {
  const image1 = texture(_image1_tex, uv()).rgb;
  const image2 = texture(_image2_tex, uv()).rgba;
  const image3 = texture(_image3_tex, uv()).rgb;
  const image4 = texture(_image1_tex, uv()).rgb;
  const image5 = texture(_image1_tex, uv()).rgb;

  return { materialParts: { "0": { color: image1, normal: normalMap(image3), roughness: image2.g, metalness: image2.b }, "1": { color: image4, metalness: float(1) }, "2": { color: image5, roughness: float(0.5), metalness: float(1) } }, modelSignature: { materials: ["Body", "Base", "Trim"] } };
});

export default shader;
"
`;

exports[`what the restore paths and the parse make of it > SCAN: snapshot of the emitted code and the graph structure 2`] = `
"imageNode#0 {"imageB64":"<196631 chars>","width":1024,"height":576,"fileName":"Body_diffuse.jpg","colorSpace":"color","orientation":"gltf"}
imageNode#1 {"imageB64":"<35 chars>","width":4,"height":2,"fileName":"Body_orm.png","colorSpace":"data","orientation":"gltf"}
imageNode#2 {"imageB64":"<31 chars>","width":2,"height":2,"fileName":"Body_normal.png","colorSpace":"data","orientation":"gltf"}
imageNode#3 {"imageB64":"<196631 chars>","width":1024,"height":576,"fileName":"Base_diffuse.jpg","colorSpace":"color","orientation":"gltf"}
imageNode#4 {"imageB64":"<196631 chars>","width":1024,"height":576,"fileName":"Trim_diffuse.jpg","colorSpace":"color","orientation":"gltf"}
output#5 {}
  materials=[{"gltfMaterialIndex":0,"exposedPorts":["color","roughness","metalness","normal","position"]},{"gltfMaterialIndex":1,"exposedPorts":["color","roughness","metalness","position"],"values":{"metalness":1}},{"gltfMaterialIndex":2,"exposedPorts":["color","roughness","metalness","position"],"values":{"roughness":0.5,"metalness":1}}]
  modelSignature={"materials":["Body","Base","Trim"]} modelMeshes=[{"name":"Body","material":0},{"name":"Base","material":1},{"name":"Trim","material":2}]
imageNode#0.out -> output#5.m1:color (vec3)
imageNode#1.g -> output#5.m1:roughness (float)
imageNode#1.b -> output#5.m1:metalness (float)
imageNode#2.out -> output#5.m1:normal (vec3)
imageNode#3.out -> output#5.m2:color (vec3)
imageNode#4.out -> output#5.m3:color (vec3)"
`;
